added voice command dictionary trainer

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,10 @@
     
     <string name="menu_settings">menu</string>
     
+    <string-array name="commands">
+	<item>back</item>
+	<item>next</item>
+	<item>menu</item>
+	</string-array>
+    
 </resources>
