--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,9 +19,33 @@
     <string name="menu_settings">menu</string>
     
     <string-array name="commands">
+    <item>ready</item>
+        
 	<item>back</item>
 	<item>next</item>
+	<item>up</item>
+	<item>down</item>
 	<item>menu</item>
+	<item>overview</item>
+	<item>stowage</item>
+	<item>annotations</item>
+	<item>ground</item>
+	<item>close</item>
+	
+	<item>start</item>
+	<item>pause</item>
+	<item>reset</item>
+		
+	<item>step 1</item>
+	<item>step 2</item>
+	<item>step 3</item>
+	<item>step 4</item>
+	<item>step 5</item>
+	<item>step 6</item>
+	<item>step 7</item>
+	<item>cycle 1</item>
+	<item>cycle 2</item>
+	
 	</string-array>
     
 </resources>
