fix spinner lag, fix immediate crash after closing program

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,7 +31,10 @@
 	<item>annotations</item>
 	<item>ground</item>
 	<item>close</item>
-	
+	<item>expand</item>
+	<item>collapse</item>
+	<item>log</item>
+		
 	<item>start</item>
 	<item>pause</item>
 	<item>reset</item>
