--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<!-- Control Panel -->
+    <string name="metaioSDKSignature">QBC+f4T8pKieNLT8Knb2VHT2kHwc86+vb5hyM8xlDMU=</string>
+    
 	<string name="app_name">ARbra</string>
 	
     <!-- Connection PopUp -->
@@ -10,45 +11,14 @@
     <string name="Connected">Connected</string>
     <string name="NotConnected">Not Connected</string>
     <string name="Back">Back</string>
-    <string name="Connect_Msg1">Please enter your Saset system\'s local IP address.</string>
+    <string name="Connect_Msg1">Please enter your system\'s local IP address.</string>
     <string name="Connect_Msg2">Connection failed.\nCheck your Internet connection or IP address.</string>
-    <string name="Connect_Msg3">Your Android device has been disconnected from your Saset system.</string>
+    <string name="Connect_Msg3">Your Android device has been disconnected from your system.</string>
     <string name="Connect_Msg4">You are successfully connected.</string>
     <string name="IP_Address">IP Address:</string>
     
     <string name="menu_settings">menu</string>
     
-    <string-array name="commands">
-    <item>ready</item>
-        
-	<item>back</item>
-	<item>next</item>
-	<item>up</item>
-	<item>down</item>
-	<item>menu</item>
-	<item>overview</item>
-	<item>stowage</item>
-	<item>annotations</item>
-	<item>ground</item>
-	<item>close</item>
-	<item>expand</item>
-	<item>collapse</item>
-	<item>log</item>
-		
-	<item>start</item>
-	<item>pause</item>
-	<item>reset</item>
-		
-	<item>step 1</item>
-	<item>step 2</item>
-	<item>step 3</item>
-	<item>step 4</item>
-	<item>step 5</item>
-	<item>step 6</item>
-	<item>step 7</item>
-	<item>cycle 1</item>
-	<item>cycle 2</item>
-	
-	</string-array>
+
     
 </resources>
